// Vitest Snapshot v1

exports[`Step > snapshot 1`] = `
"<div class=\\"ak-step ak-steps-item ak-horizontal-hairline finish\\">
  <div class=\\"ak-step_line\\"></div>
  <div class=\\"ak-step_index\\">0</div>
  <div class=\\"ak-step_inner\\">
    <!--v-if-->
    <div class=\\"ak-step_content\\"></div>
  </div>
</div>"
`;

exports[`Steps > snapshot 1`] = `"<div class=\\"ak-steps\\"></div>"`;

exports[`Steps > snapshot baseList 1`] = `
"<div class=\\"ak-steps\\">
  <div class=\\"ak-step ak-steps-item ak-horizontal-hairline active\\">
    <div class=\\"ak-step_line\\"></div>
    <div class=\\"ak-step_index\\">0</div>
    <div class=\\"ak-step_inner\\">
      <div class=\\"ak-step_title\\">title 1</div>
      <div class=\\"ak-step_content\\">content 1</div>
    </div>
  </div>
  <div class=\\"ak-step ak-steps-item ak-horizontal-hairline active\\">
    <div class=\\"ak-step_line\\"></div>
    <div class=\\"ak-step_index\\">0</div>
    <div class=\\"ak-step_inner\\">
      <div class=\\"ak-step_title\\">title 2</div>
      <div class=\\"ak-step_content\\">content 2</div>
    </div>
  </div>
  <div class=\\"ak-step ak-steps-item ak-horizontal-hairline active\\">
    <div class=\\"ak-step_line\\"></div>
    <div class=\\"ak-step_index\\">0</div>
    <div class=\\"ak-step_inner\\">
      <div class=\\"ak-step_title\\">title 3</div>
      <div class=\\"ak-step_content\\">content 3</div>
    </div>
  </div>
</div>"
`;
